--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,15 +10,15 @@
 
     <div class="m-3">
         <!-- acno -->
-<input (change)="acnoChange( $event)"class="form-control"type="text"[placeholder]="accPlaceholder">
+<input #acno class="form-control"type="text"[placeholder]="accPlaceholder">
 
     </div>
     <div class="m-3">
         <!-- password -->
-        <input (change)="pswdChange( $event)"class="form-control" type="password"placeholder="Password">
+        <input #pswd class="form-control" type="password"placeholder="Password">
     </div>
     <div class="m-3">
-        <input (click)="login()" class="btn btn-primary"type="button"value="Login"name=""id="loginBtn">
+        <input (click)="login(acno,pswd)" class="btn btn-primary"type="button"value="Login"name=""id="loginBtn">
     </div>
 </form>
 </div>
